Fix switching to VT2 with mus/mash.

Switching to VT2 on Chrome OS with --mus or --mash was broken on some
boards due to copy and paste errors calling the wrong function.

Bug: 777571, 772023
Change-Id: I4f77ae795bd5cd19b767e6bb9e40c4a28d08c2c3
Reviewed-on: https://chromium-review.googlesource.com/748812
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513160}
Former-commit-id: 66782d2a8d72c4b2126c481d410983e86b35d6dc